--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -5,7 +5,6 @@
   height: 100%;
   margin: auto;
   display: flex;
-  position: absolute;
 }
 
 .top-tags {
