--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -75,10 +75,11 @@
 
       @media (max-width: 1000px) {
         width: 10vw;
-        font-size: 3vh;
+        font-size: 2.2vw;
         float: left;
         display: block;
         padding: 0px 10px;
+        line-height: auto;
       }
 
       i {
@@ -99,7 +100,7 @@
 
       &:after {
         content: '';
-        font-size: 1rem;
+        font-size: 0.5rem;
         letter-spacing: 2px;
         position: absolute;
         bottom: 0;
@@ -146,16 +147,24 @@
     margin: 0;
 
     @media (max-width: 1000px) {
-      bottom: auto;
-      left: 40%;
+      bottom: 0;
+      left: 90%;
+      width: 10vw;
+      height: 100%;
     }
 
     li {
+      height: 100%;
       a {
         padding: 3vh 0;
         display: block;
         font-size: 2.5vw;
         line-height: 2.5vw;
+
+        @media (max-width: 1000px) {
+          height: 100%;
+          font-size: 4vh;
+        }
 
         &:hover svg {
           color: App.$highlight-color;
